# tsink

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
benches/: storage_benchmarks.rs  workload.rs
crates/tsink-server/: Cargo.toml
crates/tsink-server/src/: handlers.rs  rbac.rs  tenant.rs
crates/tsink-server/src/cluster/: consensus.rs  control.rs  distributed_storage.rs  hotspot.rs  outbox.rs  query.rs  rpc.rs
crates/tsink-uniffi/: Cargo.toml  pyproject.toml  uniffi.toml
crates/tsink-uniffi/src/: builder.rs  conversions.rs  db.rs  error.rs  lib.rs
crates/tsink-uniffi/tests/: integration_test.rs  python_rename_config_test.rs
docs/: clustering-internals.md  data-types.md  python-bindings.md  rollups.md  server-deployment.md  storage.md  tiered-storage.md
examples/: basic_usage.rs  comprehensive.rs  persistent_storage.rs  production_example.rs
scripts/: measure_bpp.sh
src/: async.rs  bstream.rs  cgroup.rs  concurrency.rs  disk.rs  encoding.rs  error.rs  label.rs  lib.rs  list.rs  memory.rs  mmap.rs  partition.rs  storage.rs  value.rs  wal.rs
src/engine/: bootstrap.rs  chunk.rs  compactor.rs  config.rs  core_impl.rs  encoder.rs  engine.rs  fs_utils.rs  index.rs  lifecycle.rs  maintenance.rs  metrics.rs  mod.rs  observability.rs  process_lock.rs  query.rs  runtime.rs  segment.rs  series_registry.rs  wal.rs
src/engine/query_read/: pagination.rs
src/engine/tests/: admission_control.rs  capacity.rs  ingest_concurrency.rs  mod.rs  persistence_background.rs  persistence_segments.rs  reliability.rs  retention_policy.rs
src/engine/wal/: segments.rs
src/promql/: parser.rs
tests/: async_storage_test.rs  concurrency_test.rs  integration_test.rs  label_test.rs  memory_safety_test.rs  query_edge_cases_test.rs  query_options_test.rs  simple_test.rs  typed_value_behaviors_test.rs  wal_corruption_test.rs
