[package]
name = "tsink"
version = "0.4.1"
edition = "2024"
authors = ["h2337"]
description = "A lightweight embedded time-series database with a straightforward API"
repository = "https://github.com/h2337/tsink"
homepage = "https://github.com/h2337/tsink"
license = "MIT"
keywords = ["time-series", "database", "embedded", "tsdb", "metrics"]
categories = ["database", "embedded", "data-structures"]
readme = "README.md"

[dependencies]
# Core dependencies
thiserror = "2.0"
parking_lot = "0.12"
dashmap = "6.1"
crossbeam-channel = "0.5"
bytes = "1.9"
num_cpus = "1.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Time handling
chrono = "0.4"

# Memory mapping
memmap2 = "0.9"

# Logging
tracing = "0.1"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.14"
proptest = "1.6"
env_logger = "0.11"
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
anyhow = "1.0"

[features]
default = []

[[bench]]
name = "storage_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
