[package]
name = "tsink"
version = "0.9.0"
edition = "2021"
authors = ["h2337"]
description = "A lightweight embedded time-series database with a straightforward API"
repository = "https://github.com/h2337/tsink"
homepage = "https://github.com/h2337/tsink"
license = "MIT"
keywords = ["time-series", "database", "embedded", "tsdb", "metrics"]
categories = ["database", "embedded", "data-structures"]
readme = "README.md"

[workspace]
members = [".", "crates/tsink-server", "crates/tsink-uniffi"]
default-members = [".", "crates/tsink-server", "crates/tsink-uniffi"]
resolver = "2"

[dependencies]
thiserror = "2.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
num_cpus = "1.17"
crc32fast = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
rayon = "1.11"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"

memmap2 = "0.9"

tracing = "0.1"
regex = "1.12"
async-channel = { version = "2.5", optional = true }
roaring = "0.11"
zstd = "0.13"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.8"
tempfile = "3.26"
proptest = "1.10"
env_logger = "0.11"
tokio = { version = "1.50", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
anyhow = "1.0"
chrono = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
promql = []
async-storage = ["dep:async-channel"]

[[bench]]
name = "storage_benchmarks"
harness = false

[[bench]]
name = "workload"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
