[package]
name = "tsink-server"
version = "0.9.0"
edition = "2021"
description = "Server mode for tsink with Prometheus remote read/write wire compatibility"
repository = "https://github.com/h2337/tsink"
homepage = "https://github.com/h2337/tsink"
license = "MIT"

[dependencies]
tsink = { version = "0.9.0", path = "../..", features = ["promql"] }
prost = "0.14"
regex = "1.12"
snap = "1.1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "signal", "sync", "macros", "time"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.6"

[dev-dependencies]
tempfile = "3.26"
