[package]
name = "tsink-server"
version = "0.10.1"
edition = "2021"
build = "build.rs"
description = "Server mode for tsink with Prometheus remote read/write wire compatibility"
repository = "https://github.com/h2337/tsink"
homepage = "https://github.com/h2337/tsink"
license = "MIT"

[dependencies]
tsink = { version = "0.10.1", path = "../.." }
prost = "0.14"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
clap = { version = "4.5.51", features = ["derive"] }
snap = "1.1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "signal", "sync", "macros", "time"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
x509-parser = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.6"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
base64 = "0.22"
ring = "0.17"

[dev-dependencies]
tempfile = "3.26"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3.2.0"
