[package]
name = "tsink-uniffi"
version = "0.9.0"
edition = "2021"
description = "UniFFI bindings for tsink time-series database"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "tsink_uniffi"

[dependencies]
tsink = { version = "0.9.0", path = "../.." }
uniffi = { version = "0.31", features = ["cli"] }
parking_lot = "0.12"
thiserror = "2.0"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dev-dependencies]
tempfile = "3.26"
