[package]
name = "tsink-uniffi"
version = "0.10.2"
edition = "2021"
description = "UniFFI bindings for tsink time-series database"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "tsink"
doc = false

[dependencies]
tsink_core = { package = "tsink", version = "0.10.2", path = "../.." }
uniffi = { version = "0.31", features = ["cli"] }
parking_lot = "0.12"
thiserror = "2.0"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dev-dependencies]
tempfile = "3.26"
